test/lattests/extensions/objects1/bad/newArrayOfNonexistentType.lat
int main() {
    int x = new a[10];
    return 0;
}